<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.trqhxrd</groupId>
    <artifactId>grapes-rpg</artifactId>
    <version>1.1-SNAPSHOT</version>
    <name>GrapesRPG</name>
    <packaging>jar</packaging>

    <developers>
        <developer>
            <id>trqhxrd</id>
            <name>Trqhxrd</name>
            <url>https://github.trqhxrd.de</url>
            <organizationUrl>https://github.com/GrapesDevs/</organizationUrl>
        </developer>
        <developer>
            <id>tabbyplayz</id>
            <name>Tabbyplayz</name>
            <organizationUrl>https://github.com/GrapesDevs/</organizationUrl>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.settings.skipTests>false</project.settings.skipTests>
        <project.trqhxrd.link>http://192.168.0.50:8081</project.trqhxrd.link>
        <mainClass>me.trqhxrd.grapesrpg.Grapes</mainClass>
        <author>Trqhxrd</author>
    </properties>

    <distributionManagement>
        <repository>
            <id>deployment</id>
            <name>Nexus Repository</name>
            <url>${project.trqhxrd.link}/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>deployment</id>
            <name>Nexus Repository</name>
            <url>${project.trqhxrd.link}/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <build>
        <finalName>${project.name}-${project.version}</finalName>
        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>*</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <!-- Maven Shade Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                </configuration>
            </plugin>
            <!-- Maven Clean Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${project.basedir}/Server/plugins</directory>
                            <includes>
                                <include>*.jar</include>
                            </includes>
                            <followSymlinks>false</followSymlinks>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <!-- Maven Surefire Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <skipTests>${project.settings.skipTests}</skipTests>
                </configuration>
            </plugin>
            <!-- Maven Failsafe Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
            <!-- Maven Copy Plugin -->
            <plugin>
                <groupId>com.coderplus.maven.plugins</groupId>
                <artifactId>copy-rename-maven-plugin</artifactId>
                <version>1.0</version>
                <executions>
                    <execution>
                        <id>copy-file</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <fileSets>
                                <fileSet>
                                    <sourceFile>target/${project.build.finalName}.jar</sourceFile>
                                    <destinationFile>Server/plugins/${project.name}.jar</destinationFile>
                                </fileSet>
                                <fileSet>
                                    <sourceFile>target/${project.build.finalName}.jar</sourceFile>
                                    <destinationFile>target/${project.name}.jar</destinationFile>
                                </fileSet>
                            </fileSets>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <!-- Spigot Repository -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <!-- GrapesDevs Repository -->
        <repository>
            <id>deployment</id>
            <name>GrapesDev's Repository</name>
            <url>${project.trqhxrd.link}/repository/libraries/</url>
        </repository>
        <!-- Maven Central -->
        <repository>
            <id>central</id>
            <name>Maven Central</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Spigot Dependency -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.16.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- CraftBukkit Dependency -->
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>craftbukkit</artifactId>
            <version>1.16.5-R0.3-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- JFiglet Dependency -->
        <dependency>
            <groupId>com.github.lalyos</groupId>
            <artifactId>jfiglet</artifactId>
            <version>0.0.8</version>
            <scope>compile</scope>
        </dependency>
        <!-- Reflections Dependency -->
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.12</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
</project>